# detect-behavior-with-sensor-data

./: Makefile  README.md  pyproject.toml  test_model_config.py
detect_behavior_with_sensor_data/: __init__.py  config.py  dataset.py  features.py  plots.py  selection.py
detect_behavior_with_sensor_data/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
